Switch to jpackage for Docker image